--- a/lesson-07/pom.xml
+++ b/lesson-07/pom.xml
@@ -21,11 +21,6 @@
     <dependencies>
         <dependency>
             <groupId>net.bytebuddy</groupId>
-            <artifactId>byte-buddy</artifactId>
-            <version>1.10.1</version>
-        </dependency>
-        <dependency>
-            <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy-agent</artifactId>
             <version>1.10.1</version>
         </dependency>
@@ -34,10 +29,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
         </dependency>
+
         <dependency>
-            <groupId>cn.iocoder.learning</groupId>
-            <artifactId>example01</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.9.13</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -88,6 +85,14 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>6</source>
+                    <target>6</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
